# octoauthor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  taskforge-config.yaml  test-config.yaml  test-pip-config.yaml
.github/workflows/: doc-audit.yaml
docker/: entrypoint.sh
docs/architecture/: threat-model.md
docs/development/: roadmap.md
docs/setup/: docker-deployment.md
playbooks/: graphic-designer.yaml  navigator.yaml  orchestrator.yaml  qa-reviewer.yaml  writer.yaml
sdks/fastapi/: pyproject.toml
sdks/fastapi/octoauthor_fastapi/: __init__.py  decorator.py  middleware.py
sdks/react/: package.json  tsconfig.json
sdks/react/src/: DocViewer.tsx  HelpButton.tsx  OctoAuthorProvider.tsx  index.ts
specs/: doc-standard.yaml  tag-schema.yaml
src/octoauthor/: __init__.py  cli.py  pipeline.py
src/octoauthor/auditor/: __init__.py  agent.py  github_client.py  models.py  reporter.py  reviewer.py
src/octoauthor/core/: git.py  logging.py  url.py
src/octoauthor/core/config/: __init__.py  settings.py
src/octoauthor/core/models/: __init__.py  agents.py  capture.py  docs.py  providers.py  service.py
src/octoauthor/core/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai_compat.py  registry.py
src/octoauthor/core/security/: __init__.py  content.py  engine.py  models.py  pii.py  sanitizer.py  unicode.py  urls.py  validator.py
src/octoauthor/integrations/github/: __init__.py  branch.py  client.py  pr.py
src/octoauthor/integrations/notion/: __init__.py  models.py  sync.py
src/octoauthor/mcp_servers/: __init__.py  registry.py
src/octoauthor/mcp_servers/app_inspector/: __init__.py  config.py  inspector.py  models.py  server.py  tools.py
src/octoauthor/mcp_servers/code_reader/: __init__.py  config.py  feature_models.py  models.py  react_parser.py  server.py  tools.py
src/octoauthor/mcp_servers/doc_store/: __init__.py  config.py  models.py  server.py  storage.py  tools.py
src/octoauthor/mcp_servers/doc_writer/: __init__.py  config.py  models.py  prompts.py  server.py  tools.py
src/octoauthor/mcp_servers/git_ops/: __init__.py  config.py  server.py
src/octoauthor/mcp_servers/visual_qa/: ocr.py  (+6 more)
src/octoauthor/service/: __init__.py  app.py  auth.py  config_ui.py  middleware.py  routes.py  targets.py
tests/: conftest.py
tests/security/: test_scanners.py
tests/unit/: test_app_inspector.py  test_auditor.py  test_code_reader.py  test_doc_store.py  test_doc_writer.py  test_fastapi_sdk.py  test_feature_map.py  test_git_ops.py  test_integrations.py  test_logging.py  test_models.py  test_providers.py  test_sandbox.py  test_screenshot.py  test_service.py  test_settings.py  test_unified_server.py  test_url_rewrite.py  test_visual_qa.py
(+9 files in other folders)
