[project]
name = "octoauthor"
version = "0.1.0"
description = "AI-powered user documentation generator with zero-trust security. Autonomous doc creation via MCP servers, agentic workflows, and multi-layer review."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Turn10 Innovations" },
]
keywords = [
    "documentation",
    "ai",
    "mcp",
    "playwright",
    "agentic",
    "automation",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "playwright>=1.40",
    "mcp>=1.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12",
    "pillow>=10.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
providers-anthropic = ["anthropic>=0.30"]
providers-openai = ["openai>=1.30"]
providers-ollama = ["ollama>=0.3"]

[project.urls]
Homepage = "https://octoauthor.com"
Repository = "https://github.com/turn10innovations/octoauthor"
Documentation = "https://octoauthor.com/docs"

[project.scripts]
octoauthor = "octoauthor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/octoauthor"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["octoauthor"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
